--- a/web-data-vizz/public/login.html
+++ b/web-data-vizz/public/login.html
@@ -70,6 +70,8 @@
                         console.log(JSON.stringify(json));
                         sessionStorage.EMAIL_USUARIO = json.email;
                         sessionStorage.NOME_USUARIO = json.nome;
+                        sessionStorage.SOBRENOME_USUARIO = json.sobrenome;
+                        sessionStorage.NIVEL_USUARIO = json.nivel;
                         sessionStorage.ID_USUARIO = json.idUsuario; 
                     });
 
