--- a/web-data-vizz/public/index.html
+++ b/web-data-vizz/public/index.html
@@ -133,9 +133,9 @@
         <section class="contato" id="contato">
             <div class="formulario_contato">
                 <h1>Entre em contato</h1>
-                <input class="cttNome" type="text" id="input_nome">
-                <input class="cttEmail" type="text" id="input_email">
-                <input class="cttTexto" type="text" id="input_mensagem">
+                <input class="cttNome" type="text" placeholder="Nome" id="input_nome">
+                <input class="cttEmail" type="text" placeholder="Email" id="input_email">
+                <input class="cttTexto" type="text" placeholder="Mensagem" id="input_mensagem">
                 <button class="botaoEnviar">Enviar</button>
             </div>
         </section>
