Atualização - Criação do gráfico de barra de progresso.

--- a/web-data-vizz/public/index.html
+++ b/web-data-vizz/public/index.html
@@ -39,19 +39,20 @@
             <img style="width:450px; height: 539px;" src="assets/sobre_violino.png">
             <div class="sv_conteudo">
                 <h1>O que é o violino?</h1>
-                <span> O violino é um instrumento de cordas friccionadas criado na Itália no século XVI <br>
-                    e é considerado um dos mais importantes da música clássica. Ele possui quatro cordas <br>
-                    afinadas em ré, lá, mi e sol, e se destaca pelo timbre agudo, expressivo e versátil. <br>
-                    Seu papel pode variar desde linhas melódicas delicadas até solos intensos, sendo usado <br>
-                    tanto em orquestras quanto em músicas populares.</span>
+                <p>
+                    <span class="p">O</span> violino é um instrumento de cordas friccionadas criado na Itália no século
+                    XVI
+                    e é considerado um dos mais importantes da música clássica. Ele possui quatro cordas
+                    afinadas em ré, lá, mi e sol, e se destaca pelo timbre agudo, expressivo e versátil.
+                    Seu papel pode variar desde linhas melódicas delicadas até solos intensos, sendo usado
+                    tanto em orquestras quanto em músicas populares.
+                </p>
             </div>
         </section>
 
         <section class="aprender_violino" id="aprender_violino">
             <div class="av_conteudo">
                 <h1>Por que aprender violino?</h1>
-                <span>Aprender violino vai muito além de tocar músicas bonitas. Veja os principais benefícios em
-                    aprender o instrumento. <br> <br> </span>
             </div>
             <div class="beneficio">
                 <div class="beneficio1">
@@ -71,27 +72,28 @@
                     <h3>Superação e foco: A evolução no violino acontece em etapas, fortalecendo a resiliência.</h3>
                 </div>
             </div>
-            <div class="desafio_aprender">
-                <span>Mas aprender violino não é fácil. Ele é considerado um dos instrumentos mais complexos do mundo,
-                    exigindo técnica, postura, precisão e dedicação diária.</span> <br>
-                <span>E é justamente para facilitar essa caminhada que surgiu a ideia do <b>Violin Study</b>, um website
-                    feito para ajudar <br> estudantes a organizarem seus estudos, manterem motivação e acompanharem seu
-                    progresso.</span>
-            </div>
+                <span class="desafio_aprender">
+                    Mas aprender violino não é fácil. Ele é considerado um dos instrumentos mais complexos do mundo, e é justamente para facilitar essa caminhada que surgiu a ideia do <b>Violin Study</b>, um website
+                    feito para ajudar estudantes a organizarem seus estudos, manterem motivação e acompanharem seu
+                    progresso.
+                </span>
         </section>
 
         <section class="sobre_mim" id="sobre_mim">
             <div class="sm_conteudo">
                 <h1>Sobre mim</h1>
-                <span> Meu nome é Felipe, tenho 19 anos e toco violino há mais de 10 anos na minha igreja. <br>
-                    Desde pequeno, sempre estive perto da música, pois cresci vendo a orquestra tocar, e o som <br>
+                <p> <span class="p">Meu</span> nome é Felipe, tenho 19 anos e toco violino há mais de 10 anos na minha
+                    igreja.
+                    Desde pequeno, sempre estive perto da música, pois cresci vendo a orquestra tocar, e o som
                     dos violinos chamava muito minha atenção. Foi ali que nasceu a vontade de aprender. <br> <br>
-                    Com o tempo, comecei meus estudos e fui evoluindo aos poucos, enfrentei muitos desafios, <br>
-                    fases de muito treino e outros momentos que tive que recomeçar. A música sempre fez parte <br>
+                    <span class="p">Com</span> o tempo, comecei meus estudos e fui evoluindo aos poucos, enfrentei
+                    muitos desafios,
+                    fases de muito treino e outros momentos que tive que recomeçar. A música sempre fez parte
                     da minha vida e me ensinou a ser mais disciplinado, paciente e dedicado. <br> <br>
-                    Em 2022, tive a oportunidade de me tornar professor voluntário de violino na própria igreja <br>
+                    <span class="p">Em</span> 2022, tive a oportunidade de me tornar professor voluntário de violino na
+                    própria igreja
                     onde tudo começou. Hoje, além de continuar estudando, ajudo outras pessoas a aprenderem a música.
-                </span>
+                </p>
             </div>
             <img src="assets/sobre_mimm.jpg">
         </section>
